@@ -1,3 +1,7 @@
+2018-03-01  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* pdfobj.c: Fix typo and improve a warning (incomplete fix).
+
 2018-02-17  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* cid.c, dpxfile.[ch], dvipdfmx.c, epdf.c, jp2image.c,
